--- a/css/components.css
+++ b/css/components.css
@@ -416,7 +416,7 @@
   opacity: 0.5;
 }
 
-.ring-field.hero svg {
+.ring-field.ring-field-hero svg {
   top: 50%;
   left: 50%;
   width: min(160vw, 1400px);
